[package]
name = "bmo-search"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "CLI for searching Mozilla's Bugzilla (BMO)"
repository = "https://github.com/jnjaeschke/bmo-search"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.{ archive-format }"
bin-dir = "{ bin }{ binary-ext }"

[[bin]]
name = "bmo-search"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
